--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <!-- Conteúdo da barra superior -->
         <h1>Minha Barra Superior</h1>
     </div>
-    <iframe class="site-frame" src="https://scratch.mit.edu/projects/editor/?tutorial=getStarted"></iframe>
+    <iframe class="site-frame" src="https://scratch.mit.edu/"></iframe>
 </body>
 </html>
